parrot-v/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parrot-parrot
  labels:
    app: parrot-parrot
    chart: parrot-parrot
    release: parrot
    heritage: parrot-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parrot-parrot
  template:
    metadata:
      labels:
        app: parrot-parrot
    spec:
      containers:
      - name: parrot
        image: ##clustername##.azurecr.io/parrot:##parrotversion##
        ports:
        - containerPort: 80
      nodeSelector:
        kubernetes.io/role: agent
        beta.kubernetes.io/os: linux
        type: virtual-kubelet
      tolerations:
      - key: virtual-kubelet.io/provider
        operator: Exists
      - key: azure.com/aci
        effect: NoSchedule
      imagePullSecrets:
      - name: acr-secret
