parrot-v/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: parrot
  labels:
    app: parrot
    chart: parrot-429
    release: parrot
    heritage: parrot-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: release.cluster.us.aksapp.io
    http:
      paths:
      - path: /
        backend:
          serviceName: parrot
          servicePort: 80
